--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- We load the libraries we need directly from the "node_modules" folder.
-    In a more complex project, we would use a different approach here, 
+    In a more complex project, we would use a different approach here,
     e.g. working with a build tool like gulp.js or Angular-CLI. -->
-    <script src="lib/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="lib/systemjs/dist/system.src.js"></script>
-    <script src="lib/rxjs/bundles/Rx.js"></script>
-    <script src="lib/angular2/bundles/angular2.dev.js"></script>
+    <script src="lib/angular2-polyfills.js"></script>
+    <script src="lib/system.src.js"></script>
+    <script src="lib/Rx.js"></script>
+    <script src="lib/angular2.dev.js"></script>
 
     <!-- Load the SystemJS config -->
     <script src="scripts/system.config.js"></script>
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <!-- Here we are using the selector "sp-bookmark", 
-    which we defined as component meta data in the "BookmarkComponent" decorator. 
-    Everything inside the element tag will only be seen 
+    <!-- Here we are using the selector "sp-bookmark",
+    which we defined as component meta data in the "BookmarkComponent" decorator.
+    Everything inside the element tag will only be seen
     until our application is loaded. -->
     <sp-list>Loading bookmarks...</sp-list>
   </body>
