add remove bookmark functionalites

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html>
   <head>
 
-    <title>Bookmark Extension</title>
+    <title>New Tab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- We load the libraries we need directly from the "node_modules" folder.
-    In a more complex project, we would use a different approach here,
-    e.g. working with a build tool like gulp.js or Angular-CLI. -->
-    <script src="lib/angular2-polyfills.js"></script>
-    <script src="lib/system.src.js"></script>
-    <script src="lib/Rx.js"></script>
-    <script src="lib/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.9/angular2-polyfills.min.js"></script>
+    <script src="https://code.angularjs.org/tools/system.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.9/Rx.min.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.9/angular2.min.js"></script>
 
     <!-- Load the SystemJS config -->
     <script src="scripts/system.config.js"></script>
@@ -22,7 +19,7 @@
     which we defined as component meta data in the "BookmarkComponent" decorator.
     Everything inside the element tag will only be seen
     until our application is loaded. -->
-    <sp-list>Loading bookmarks...</sp-list>
+    <sp-list>Loading...</sp-list>
   </body>
 
 </html>
